--- a/static/json/languages/en_US.json
+++ b/static/json/languages/en_US.json
@@ -1271,14 +1271,12 @@
       "sign_in": "Sign In",
       "get_eth": "Get some ETH",
       "try_swap": "Try a Swap",
-
       "referral_link_ready": "Your referral link is ready",
       "share_and_earn": "Tweet your referral link and get an extra 250 points",
       "plus_percent_of_refers": "Plus you’ll earn 10% of the points earned by anyone you refer",
       "share": "Share to X",
-      "share_tweet": "🌈🌈🌈🌈🌈🌈🌈🌈🌈🌈🌈🌈\n\nI just had %{points} Rainbow Points dropped into my wallet\nEverybody has at least 100 points waiting for them, but you might have more!\n\nClaim your drop: rainbow.me/points?ref=%{referralCode}\n\n🌈🌈🌈🌈🌈🌈🌈🌈🌈🌈🌈🌈",
-      "share_tweet_with_metamask_bonus": "🌈🌈🌈\n\nI just had %{points} Rainbow Points dropped into my wallet — plus an extra %{metamaskBonus} Points as a bonus for migrating my MetaMask wallet into Rainbow 🦊 🔫\n\nEverybody has at least 100 points waiting for them, but you might have more! Claim your drop: rainbow.me/points?ref=%{referralCode}\n\n🌈🌈🌈",
-
+      "share_tweet": "🌈🌈🌈🌈🌈🌈🌈🌈🌈🌈🌈🌈\n\nI just had %{points} Rainbow Points dropped into my wallet\nEverybody has at least 100 points waiting for them, but you might have more!\n\nClaim your drop: https://rainbow.me/points?ref=%{referralCode}\n\n🌈🌈🌈🌈🌈🌈🌈🌈🌈🌈🌈🌈",
+      "share_tweet_with_metamask_bonus": "🌈\n\nI just had %{points} Rainbow Points dropped into my wallet — and an extra %{metamaskBonus} Points as a bonus for migrating my MetaMask wallet into Rainbow 🦊 🔫\n\nEverybody has at least 100 points waiting for them, but you might have more! Claim your drop: https://rainbow.me/points?ref=%{referralCode}\n\n🌈",
       "registration_complete": "Registration complete",
       "all_set": "You’re all set!",
       "keep_earning_by": "Keep earning points by swapping, bridging, minting, referring friends, and more",
