--- a/static/json/languages/en_US.json
+++ b/static/json/languages/en_US.json
@@ -111,9 +111,13 @@
         "testnet": "Testnet",
         "block_explorer_url": "Block Explorer URL",
         "add_network": "Add Network",
+        "add_rpc": "Add %{rpcName} RPC",
         "add_asset": "Add Custom Token",
         "network_added": "Network Added!",
-        "network_added_correctly": "%{networkName} has been added correctly!"
+        "network_added_correctly": "%{networkName} has been added correctly!",
+        "remove_token": "Remove Token",
+        "remove_rpc": "Remove RPC",
+        "tokens": "Tokens"
       },
       "rpc_endpoints": "RPC Endpoints",
       "enabled": "Enabled",
