testnets labels working

--- a/static/json/languages/en_US.json
+++ b/static/json/languages/en_US.json
@@ -87,6 +87,7 @@
     },
     "networks": {
       "mainnet": "Mainnet",
+      "testnet": "Testnet",
       "title": "Networks",
       "testnets": "Testnets",
       "quick_promo": {
