fix titles on screens custom rpcs vs networks

--- a/static/json/languages/en_US.json
+++ b/static/json/languages/en_US.json
@@ -101,7 +101,7 @@
         "toggle_explainer": "Enables the Testnet Mode shortcut (T) and adds a toggle to the home screen’s top-right menu."
       },
       "custom_rpc": {
-        "title": "Add Network",
+        "title": "Add Custom RPC",
         "networks": "Networks",
         "network_name": "Network Name",
         "rpc_url": "RPC URL",
